--- a/src/style.css
+++ b/src/style.css
@@ -1,69 +1,82 @@
 * {
-    padding: o;
+    padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Lucida Sans', sans-serif;
 
 }
-body {
-    font-family: Arial, sans-serif;
-    background-color: black;
-    text-align: center;
-    margin: 20px;
-    border: 2px solid #ccc; 
-    border-radius: 0.5em;
-    left: 50%;
-    top:  50%;
 
+body {
+    background-color: rgb(0, 21, 36);
+    position: absolute;
+    width: 31.25em;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+    border: 2px solid rgb(14, 131, 136);
+    border-radius: 1rem;
+    
 }
 
-h1 {
+header {
     text-align: center;
-    color: #f6f2f2;
+    padding: 1em;
+    color: #CBE4DE; 
     font-weight: 500;
     margin-bottom: 1em;
-
-}
-textarea[name] {
-    width: 300px;
-    height: 150px;
-    padding: 10px;
-    border-radius: 7px;
-    font-size: 16px;
 }
 
 textarea[name="user-input"] {
-    background-color: #dbd5d5;
-    color: #333;
-    border: 2px solid #055743;
+    resize: none;
+    width: 498px;
+    border: none;
+    padding: 2em;
+    border-radius: 0.9em;
+    background-color: #CBE4DE;
+    outline: none;
+    color: rgb(46, 79, 79);
+    text-align: left;
+    
 }
+::placeholder{
+    color: rgb(46, 79, 79); 
+    font-size: 18px;
+}
+
 ul {
     list-style-type: none; 
-    padding: 50; 
-    margin: 50; 
+    padding: 80; 
+    margin: 80; 
+    border: 2px solid rgb(14, 131, 136);
+    text-align: center;
 
 }
-
 
 li.result {
-    font-size: 16px;
+    text-align: center;
+    font-size: 19px;
     margin-bottom: 10px;
-    color: #31f4ba;
+    margin-top: 10px;
+    color: #CBE4DE;
 }
-
 
 button#reset-button {
-    background-color: #055743;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
+    background-color: #0E8388;
+    color: #CBE4DE; 
+    padding: 10px;
+    margin: 10px 0;
+    width: 100%;
+    border: 0;
+    border-radius: 4px;
+    font-size: 22px;
     cursor: pointer;
+
 }
 
-p1 {
-    margin-bottom: 20px;
-    color: #31f4ba;   
+footer {
+    font-weight: 500;
+    font-size: 19px;
+    margin-bottom: 1em;
+    color: #CBE4DE;
+    text-align: center;  
 }
-
